# wvu-ieng-331-m2-20

./: .gitignore  GRADE.md  README.md  design.md  pyproject.toml
sql/: Payment_information.sql  Price_shipping.sql  Prodcut_reviews.sql  Product_reviews.sql  Seller_consumer_location.sql  data_not_null.sql  data_quality.sql  data_row_counts.sql  data_validation_timerange.sql
src/wvu_ieng_331_m2_20/: __init__.py  pipeline.py  queries.py  validation.py
