[project]
name = "wvu-ieng-331-m2-20"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
wvu-ieng-331-m2-20 = "wvu_ieng_331_m2_20:main"

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"
