[project]
name = "wvu-ieng-331-m2-20"
version = "0.1.0"
description = "runs sql queries that are located in the sql folder based on the data that is located in the data "
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
 "altair>=6.0.0",
 "duckdb>=1.0",
 "loguru>=0.7.3",
 "pandas>=3.0.2",
 "polars>=1.39.3",
 "pyarrow>=23.0.1",
 "requests>=2.33.1",
 "typer>=0.24.1",
]

[project.scripts]
wvu-ieng-331-m2-20 = "wvu_ieng_331_m2_20.pipeline:main"

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "basedpyright>=1.39.0",
    "ruff>=0.15.10",
]
